force-app/main/default/objects/Bidder_Building_Project_Relation__c/Bidder_Building_Project_Relation__c.object-meta.xml
<CustomObject>
    <description>Shows all related bidder for the current bidder record that worked on the same Bauvorhaben</description>
    <label>Bidder Building Project Relation</label>
    <nameField>
        <displayFormat>BBP-{00000000}</displayFormat>
        <label>Bidder Building Project Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bidder Building Project Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>