force-app/main/default/objects/Bidder_Building_Project_Relation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verarbeiter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bidder Building Project Relations</relationshipLabel>
    <relationshipName>Bidder_Building_Project_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>