force-app/main/default/objects/Bidder_Building_Project_Relation__c/fields/Allocated_Fabricator__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Fabricator__c</fullName>
    <formula>IF( Bauvorhaben__r.Allocationfabricator__c =  Account__c , &apos;true&apos;, &apos;false&apos;)</formula>
    <label>Allocated Fabricator</label>
    <type>Text</type>
</CustomField>