force-app/main/default/objects/Bidder_Building_Project_Relation__c/fields/Bauvorhaben__c.field-meta.xml
<CustomField>
    <fullName>Bauvorhaben__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to that Building project</description>
    <label>Bauvorhaben</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Bidder Building Project Relations</relationshipLabel>
    <relationshipName>Bidder_Building_Project_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>