force-app/main/default/objects/Bidder_Building_Project_Relation__c/fields/Bieter__c.field-meta.xml
<CustomField>
    <fullName>Bieter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to that bidder</description>
    <label>Bieter</label>
    <referenceTo>Bidder__c</referenceTo>
    <relationshipLabel>Bidder Building Project Relations</relationshipLabel>
    <relationshipName>Bidder_Building_Project_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>