force-app/main/default/objects/Bidder_Building_Project_Relation__c/fields/Competing_Bidder__c.field-meta.xml
<CustomField>
    <fullName>Competing_Bidder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competing Bidder</label>
    <referenceTo>Bidder__c</referenceTo>
    <relationshipLabel>Bidder Building Project Relations (Competing Bidder)</relationshipLabel>
    <relationshipName>Bidder_Building_Project_Relations1</relationshipName>
    <type>Lookup</type>
</CustomField>